--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
             background-color:black;
             color:white;
         }
+         h1 {
+            text-align:center;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to OtakuDB</h1>
+    <hr>
     <input type="text" placeholder="Enter Name of Anime" label="Get Anime Episode By Name of Anime" id="animeName">
     <h3>Number of Episode: </h3>
     <h3 id="episode"></h3>
