--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OtakuDB</title>
-    <style>
-        body{
-            background-color:black;
-            color:white;
-        }
-         h1 {
-            text-align:center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to OtakuDB</h1>
@@ -20,11 +12,7 @@
     <input type="text" placeholder="Enter Name of Anime" label="Get Anime Episode By Name of Anime" id="animeName">
     <h3>Number of Episode: </h3>
     <h3 id="episode"></h3>
-    <!-- <h3>Genres: </h3>
-    <h3 id="genere"></h3> -->
-    <!-- <h3>Poster:</h3>
-    <img src="" alt="" id="img"> -->
-    <h3>About</h3>
+    <h3>About:</h3>
     <h3 id="synopsis"></h3>
     <button id="btn" onclick="getAnime()">Search</button>
 
